# synth-cookbooks-public

./: .gitignore  DEVELOPERS.md  HANDOFF_public_package_monorepo_2026-04-23.md  README.md
.github/workflows/: package-build.yml
cookbooks/archipelago_eval/: README.md  run.py
cookbooks/banking77_instruction_miprov2/: README.md
cookbooks/blogs/: README.md
cookbooks/blogs/oss-containers-and-gepa/: README.md
cookbooks/harbor_tblite_codex/: README.md  requirements.txt  run.py
cookbooks/harbor_tblite_codex/pipelinerl_tinker/: README.md  pipelinerl_tinker_plan.json
cookbooks/harbor_tblite_codex/tblite_codex_container/: SOURCE_README.md  __init__.py  codex_harbor_runner.py  pool_runner.py  run_local_eval.py  run_tblite_codex_nano_once.py  smoke.py  synth_service_app.py  tb_lite_dataset.py  tb_lite_harbor_pool.json
cookbooks/openenv_minigrid/: README.md  run.py
cookbooks/openenv_minigrid/minigrid_container/: SOURCE_README.md  container_spec.json  service_app.py  smoke.py  snapshot_proof.py  synth_service_app.py  task_registry.json
cookbooks/openenv_minigrid/pipelinerl_modal/: README.md  SOURCE_README.md  common_training.py  modal_common.py  modal_pipelinerl_plan.json  synth_task_app.py  train_rl_cispo_modal.py
cookbooks/optimizers/gepa/: .gitignore  README.md  (+2 more)
cookbooks/optimizers/gepa/banking77_container/: README.md  gepa.toml  pyproject.toml  run_fresh_gepa.sh  run_gepa_ai_blog.py  run_gepa_ai_compare.py  synth_service_app.py
cookbooks/optimizers/gepa/banking77_container/run_profiles/: blog_n24.toml  default.toml  long.toml  smoke.toml  throughput.toml
cookbooks/optimizers/gepa/crafter_container/: README.md  crafter_text_env.py  gepa.toml  pyproject.toml  run_fresh_gepa.sh  run_gepa_ai_blog.py  synth_service_app.py
cookbooks/optimizers/gepa/crafter_container/run_profiles/: blog_compare.toml  default.toml  long.toml  smoke.toml  throughput.toml
cookbooks/optimizers/gepa/hotpotqa_container/: README.md  gepa.toml  pyproject.toml  run_fresh_gepa.sh  run_gepa_ai_blog.py  synth_service_app.py
cookbooks/optimizers/gepa/hotpotqa_container/run_profiles/: blog_compare.toml  default.toml  long.toml  smoke.toml
cookbooks/optimizers/gepa/minigrid_container/: README.md  gepa.toml  pyproject.toml  run_fresh_gepa.sh  run_gepa_ai_blog.py  synth_service_app.py
cookbooks/optimizers/gepa/minigrid_container/run_profiles/: blog_compare.toml  concurrent.toml  default.toml  long.toml  smoke.toml  throughput.toml
cookbooks/optimizers/gepa/tblite_container/: README.md  gepa.toml  pyproject.toml  run_gepa_ai_blog.py  synth_service_app.py
cookbooks/optimizers/gepa/tblite_container/run_profiles/: blog_compare.toml  default.toml  long.toml  smoke.toml  throughput.toml
skills/: README.md
skills/containers/: SKILL.md
skills/gepa/: SKILL.md
skills/miprov2/: SKILL.md
(+56 files in other folders)
