[project]
name = "banking77-gepa-container"
version = "0.1.0"
description = "Public GEPA cookbook container for Banking77 (live OpenAI classifier)."
requires-python = ">=3.11"
dependencies = [
  "synth-containers>=0.2.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "openai>=1.0",
  "datasets>=2.18,<3",
]
