[project]
name = "minigrid-gepa-container"
version = "0.1.0"
description = "Public GEPA cookbook container for MiniGrid (real gymnasium env, OpenAI policy)."
requires-python = ">=3.11"
dependencies = [
  "synth-containers @ git+https://github.com/synth-laboratories/containers.git@78ec34f",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "openai>=1.0",
  "numpy>=1.26",
  "gymnasium>=0.29",
  "minigrid>=2.3",
]
